<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/completed"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/completeTargets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/btn_down_arrow_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/down_arrow"
        android:contentDescription="@string/down"
        android:onClick="move"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/down_arrow" />

    <ImageButton
        android:id="@+id/btn_left_arrow_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/left_arrow"
        android:contentDescription="@string/left"
        android:onClick="move"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_down_arrow_normal"
        app:srcCompat="@drawable/left_arrow" />

    <ImageButton
        android:id="@+id/btn_right_arrow_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/right_arrow"
        android:contentDescription="@string/right"
        android:onClick="move"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_down_arrow_normal"
        app:srcCompat="@drawable/right_arrow" />

    <ImageButton
        android:id="@+id/btn_up_arrow_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/up_arrow"
        android:contentDescription="@string/up"
        android:onClick="move"
        app:layout_constraintBottom_toTopOf="@+id/btn_down_arrow_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/up_arrow" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gameMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBack">

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/sokoban"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/completeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/moves"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movesss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moveCount"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/completeCount"
        app:layout_constraintStart_toStartOf="@+id/completeCount"
        app:layout_constraintTop_toBottomOf="@+id/completeCount" />

    <Button
        android:id="@+id/buttonPreviousLevel"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/previous_level"
        android:onClick="loadLevel"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnReset"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNextLevel"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/next_level"
        android:onClick="loadLevel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/reset"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonNextLevel"
        app:layout_constraintEnd_toStartOf="@+id/buttonNextLevel"
        app:layout_constraintStart_toEndOf="@+id/buttonPreviousLevel" />

    <Chronometer
        android:id="@+id/timeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/chooseLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:onClick="chooseLevel"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/completeCount"
        app:layout_constraintTop_toBottomOf="@+id/sokoban" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="undo"
        android:text="@string/undo"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/completeCount"
        app:layout_constraintStart_toStartOf="@+id/completeCount"
        app:layout_constraintTop_toBottomOf="@+id/movesss" />

    <Button
        android:id="@+id/playBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="playback"
        android:text="@string/playback"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/completeTargets" />


</androidx.constraintlayout.widget.ConstraintLayout>